Add Changes to APIs
