# backend/cozycoves/src/main/java/com/cozycovesnyx/cozycoves/Controller/HouseController.java
@@ -32,33 +32,6 @@ public class HouseController {
         }
     }
 
-//    @GetMapping("/{house_no}")
-//    public ResponseEntity<?> getAHouse(@PathVariable String house_no) {
-//        Optional<House> house = houseService.singleHouse(house_no);
-//        return house.map(ResponseEntity::ok).orElse(ResponseEntity.badRequest().build());
-//    }
-
-//    @GetMapping("/byState/{state}")
-//    public ResponseEntity<?> getHousesByState(@PathVariable String state) {
-//        Optional<List<House>> houses = houseService.housesByState(state);
-//        return houses.map(list -> list.isEmpty() ? ResponseEntity.badRequest().build() : ResponseEntity.ok(list))
-//                .orElse(ResponseEntity.badRequest().build());
-//    }
-
-//    @GetMapping("/byOwner/{username}")
-//    public ResponseEntity<?> getHousesByOwner(@PathVariable String username) {
-//        Optional<List<House>> houses = houseService.findHousesByOwnerUsername(username);
-//        return houses.map(list -> list.isEmpty() ? ResponseEntity.badRequest().build() : ResponseEntity.ok(list))
-//                .orElse(ResponseEntity.badRequest().build());
-//    }
-
-//    @GetMapping("/byRenter/{username}")
-//    public ResponseEntity<?> getHousesByRenter(@PathVariable String username) {
-//        Optional<List<House>> houses = houseService.findHousesByRenterUsername(username);
-//        return houses.map(list -> list.isEmpty() ? ResponseEntity.badRequest().build() : ResponseEntity.ok(list))
-//                .orElse(ResponseEntity.badRequest().build());
-//    }
-
     @GetMapping("/search")
     public ResponseEntity<?> searchHouses(
             @RequestParam(required = false) String houseNo,
@@ -85,6 +58,17 @@ public class HouseController {
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
     }
+
+//    @PostMapping("/create")
+//    public ResponseEntity<HouseDTO> createHouse(@RequestBody House house) {
+//        House createdHouse = houseService.createHouse(house);
+//        if (createdHouse != null) {
+//            HouseDTO houseDTO = houseService.convertToDTO(createdHouse);
+//            return new ResponseEntity<>(houseDTO, HttpStatus.CREATED);
+//        } else {
+//            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+//        }
+//    }
 
     @DeleteMapping("/delete/{houseNo}")
     public ResponseEntity<?> deleteHouse(@PathVariable String houseNo) {
